2006-07-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyPromptService.cpp:

	Force label wrapping.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.4 ===

	* configure.ac:

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-node-view.c:
	(ephy_node_view_selection_changed_cb), (ephy_node_view_remove):

	Work around bug #346662 by not changing selection while removing the
	nodes. Fixes crash with gtk 2.10.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (settings_change_notify),
	(ephy_window_key_press_event):

	Fix for empty menubar accel setting.
	Don't activate insensitive actions, bug #347022.

2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (entry_key_press_cb),
	(entry_key_press_after_cb), (entry_activate_after_cb),
	(match_selected_cb), (action_activated_after_cb),
	(ephy_location_entry_construct_contents),
	(ephy_location_entry_set_completion):
	* src/ephy-location-action.c: (action_activated_cb):

	Fix middle-click and ctrl-enter in the location entry autocompletion
	drop-down. Bug #345934, based on a patch by johannes@sipsolutions.net.

2006-07-06  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp: (OnProgressChange64):

	Don't hammer the cpu when downloading file with an unknown size.
	Fix bug 346671.

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_set_print_settings):

	Fix compiler warnings.
	
2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c:

	Fix compiler warning.

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:

	Guess what? Another mozilla API change!

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp: